[gd_scene load_steps=12 format=3 uid="uid://hium0maypv3q"]

[ext_resource type="Script" path="res://Scripts/MainMenu.gd" id="1_ha0a6"]
[ext_resource type="FontFile" uid="uid://bkirvl5j6t4n3" path="res://Fonts/PixelifySans-Regular.ttf" id="1_p4dpe"]
[ext_resource type="Texture2D" uid="uid://diq5hd5dojcb6" path="res://Sprites/MainMenuBackground.png" id="2_0g23v"]
[ext_resource type="PackedScene" uid="uid://b1fkdju2hvxl2" path="res://Prefabs/UI/SettingsBackgroundPanel.tscn" id="2_74c3s"]
[ext_resource type="FontFile" uid="uid://bkglmeogecjqu" path="res://Fonts/OPERATINGINSTRUCTIONS.TTF" id="3_fxo7x"]
[ext_resource type="AudioStream" uid="uid://c4pddqxiqwxkp" path="res://Sounds/Musics/MainMenuMusic.mp3" id="5_03xht"]
[ext_resource type="PackedScene" uid="uid://rwfis4pjr2lq" path="res://Prefabs/UI/CommandsPanel.tscn" id="6_e47lu"]

[sub_resource type="Animation" id="Animation_wkb65"]
resource_name = "Default"
length = 4.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2, 3, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.0872665, 0.0, 0.0872665, 0.0]
}

[sub_resource type="Animation" id="Animation_440nf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fw5jk"]
_data = {
"Default": SubResource("Animation_wkb65"),
"RESET": SubResource("Animation_440nf")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s6hvu"]
bg_color = Color(0.937255, 0.67451, 0.156863, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.647059, 0.54902, 0.152941, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 5.0
expand_margin_right = 5.0

[node name="MainMenu" type="Control" node_paths=PackedStringArray("settingBackgroundPanel", "commandsPanel")]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ha0a6")
settingBackgroundPanel = NodePath("SettingsBackgroundPanel")
commandsPanel = NodePath("CommandsPanel")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_0g23v")
expand_mode = 3

[node name="RAMterLabel" type="Label" parent="."]
texture_filter = 1
layout_mode = 1
offset_left = 30.0
offset_top = 30.0
offset_right = 463.0
offset_bottom = 183.0
pivot_offset = Vector2(216, 76)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_fxo7x")
theme_override_font_sizes/font_size = 150
text = "RAMter"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="RAMterLabel"]
autoplay = "Default"
libraries = {
"": SubResource("AnimationLibrary_fw5jk")
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -106.0
offset_top = -278.0
offset_right = 106.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="PlayButton" type="Button" parent="VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_p4dpe")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_s6hvu")
theme_override_styles/hover = SubResource("StyleBoxFlat_s6hvu")
theme_override_styles/pressed = SubResource("StyleBoxFlat_s6hvu")
theme_override_styles/disabled = SubResource("StyleBoxFlat_s6hvu")
theme_override_styles/focus = SubResource("StyleBoxFlat_s6hvu")
text = "Play"

[node name="Commands" type="Button" parent="VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_p4dpe")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_s6hvu")
theme_override_styles/hover = SubResource("StyleBoxFlat_s6hvu")
theme_override_styles/pressed = SubResource("StyleBoxFlat_s6hvu")
theme_override_styles/disabled = SubResource("StyleBoxFlat_s6hvu")
theme_override_styles/focus = SubResource("StyleBoxFlat_s6hvu")
text = "Commands"

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_p4dpe")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_s6hvu")
theme_override_styles/hover = SubResource("StyleBoxFlat_s6hvu")
theme_override_styles/pressed = SubResource("StyleBoxFlat_s6hvu")
theme_override_styles/disabled = SubResource("StyleBoxFlat_s6hvu")
theme_override_styles/focus = SubResource("StyleBoxFlat_s6hvu")
text = "Settings"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_p4dpe")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_s6hvu")
theme_override_styles/hover = SubResource("StyleBoxFlat_s6hvu")
theme_override_styles/pressed = SubResource("StyleBoxFlat_s6hvu")
theme_override_styles/disabled = SubResource("StyleBoxFlat_s6hvu")
theme_override_styles/focus = SubResource("StyleBoxFlat_s6hvu")
text = "Exit
"

[node name="SettingsBackgroundPanel" parent="." instance=ExtResource("2_74c3s")]
layout_mode = 1

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_03xht")
autoplay = true
bus = &"Music"

[node name="CommandsPanel" parent="." instance=ExtResource("6_e47lu")]
layout_mode = 1

[node name="danilomacbLabel" type="Label" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = -70.0
offset_right = 240.0
offset_bottom = -30.0
grow_vertical = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("1_p4dpe")
theme_override_font_sizes/font_size = 30
text = "by: danilomacb"

[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Commands" to="." method="_on_commands_pressed"]
[connection signal="pressed" from="VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
